Добавлена работа с базой данных, возможность бронировать вещи, оставлять комментарии